update for sway

--- a/boot/loader/entries/arch-fallback.conf
+++ b/boot/loader/entries/arch-fallback.conf
@@ -1,4 +1,4 @@
-title   01 Arch Linux Fallback
+title   Arch Linux (fallback)
 linux   /vmlinuz-linux-zen
 initrd  /{{CPU}}-ucode.img
 initrd  /initramfs-linux-zen-fallback.img
