--- a/boot/loader/entries/arch.conf
+++ b/boot/loader/entries/arch.conf
@@ -1,5 +1,5 @@
-title   00 Arch Linux
+title   Arch Linux
 linux   /vmlinuz-linux-zen
 initrd  /{{CPU}}-ucode.img
 initrd  /initramfs-linux-zen.img
-options root="LABEL=ARCH" rw quiet log-level=0
+options root="LABEL=ARCH" rw quiet log-level=0 zswap.enabled=0
