--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOSTNAME=archlinux
 USERNAME=charmer
 PASSWORD=password
-MIRROR='https://mirrors.cloud.tencent.com/archlinux/$repo/os/$arch'
+MIRROR=https://mirrors.cloud.tencent.com/archlinux/\$repo/os/\$arch
 DEVICE=/dev/sda
 CPU=amd
